--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AZURE_APP_CONFIGURATION": "Endpoint=https://xxxxx"
+    "AZURE_APP_CONFIGURATION": ""
 }
