--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,5 @@
         }
     },
     "AllowedHosts": "*",
-    "AZURE_APP_CONFIGURATION": "Endpoint=https://xxxxx"
+    "AZURE_APP_CONFIGURATION": ""
 }
